--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,8 +82,8 @@ a:hover {
   display: none;
 }
 .bmd-layout-content {
-  height: 89vh;
-  min-height: 89vh;
+  /* height: 89vh;
+  min-height: 89vh; */
   padding-top: 1.8rem;
 }
 .navbar-dark .primaryTitle,
@@ -216,5 +216,11 @@ pre[class*="language-"] > code {
   }
   pre[class*="language-"] {
     margin-bottom: 30px;
+  }
+}
+/* Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
+  .navbar {
+    border: none;
   }
 }
