Adding info to the rest of the pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,11 @@ h2 {
   margin: 15px 0 30px;
   letter-spacing: 1px;
 }
+h3 {
+  margin-bottom: 20px;
+  margin-top: 10px;
+  letter-spacing: 0.9px;
+}
 h4 {
   padding-top: 30px;
   margin: 0 0 20px;
@@ -142,7 +147,7 @@ footer {
 
 .pagination {
   display: block;
-  margin: 0 0 25px;
+  margin: 25px 0;
 }
 .forward {
   float: right;
