--- a/public/css/style.css
+++ b/public/css/style.css
@@ -182,6 +182,9 @@ footer {
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 105, 192, 0.25);
 }
+pre[class*="language-"] {
+  margin-bottom: 20px;
+}
 pre[class*="language-"] > code {
   border-left: 10px solid var(--secondary-dark, lightblue);
   box-shadow: -1px 0px 0px 0px var(--secondary-dark, lightblue),
