--- a/public/css/style.css
+++ b/public/css/style.css
@@ -329,6 +329,14 @@ pre[class*="language-"] > code {
   position: relative;
   margin-bottom: 30px;
 }
+.cardWrap {
+  max-width: 33.33333%;
+  flex: 0 0 33.33333%;
+  display: inline-block;
+  min-height: 1px;
+  padding: 0 15px;
+  margin-bottom: 30px;
+}
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
@@ -340,12 +348,27 @@ pre[class*="language-"] > code {
     margin-bottom: 30px;
   }
 }
+/* Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {
+  .cardWrap {
+    max-width: 50%;
+    flex: 0 0 50%;
+  }
+}
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
   .navbar {
     border: none;
   }
-  .card {
-    margin-bottom: 20px;
+  .cardWrap {
+    max-width: 100%;
+    flex: 0 0 100%;
+  }
+}
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+  .pagination {
+    display: flex;
   }
 }
