--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,6 +102,10 @@ a:hover {
   color: hsla(0, 0%, 100%, 0.5);
   border-color: hsla(0, 0%, 100%, 0.5);
 }
+.figure {
+  display: block;
+  text-align: center;
+}
 .figure-caption {
   text-align: center;
 }
@@ -294,7 +298,7 @@ pre[class*="language-"] > code {
   position: fixed;
   bottom: 0;
   right: 0;
-  padding: 30px;
+  padding: 0 20px 20px 0;
 }
 #create-post {
   z-index: 1001;
@@ -327,7 +331,7 @@ pre[class*="language-"] > code {
 #close-modal-btn {
   top: 0;
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: 60px;
 }
 .cardWrap {
   max-width: 33.33333%;
@@ -336,6 +340,14 @@ pre[class*="language-"] > code {
   min-height: 1px;
   padding: 0 15px;
   margin-bottom: 30px;
+}
+#syncForm {
+  max-width: 400px;
+  margin: 0 auto 15px;
+}
+video {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
 
 /* Large devices (desktops, 992px and up) */
